--- a/UrbanDjango/templates/second_task/class_template.html
+++ b/UrbanDjango/templates/second_task/class_template.html
@@ -1,10 +1,11 @@
+<!--"Это шаблон для классового представления"-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Title</title>
 </head>
 <body>
-$END$
+    "Это шаблон для классового представления"
 </body>
 </html>
