--- a/UrbanDjango/templates/third_task/shop_gp.html
+++ b/UrbanDjango/templates/third_task/shop_gp.html
@@ -1,10 +1,14 @@
+<!--Это шаблон главной страницы магазина мотоэкипа-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>SHOP MOTO GP</title>
 </head>
 <body>
-$END$
+    <h1>Главная страница</h1>
+    <h3><a href="/platform/">Главная</a></h3>
+    <h3><p><a href="/platform/buy">Купить шлем</a></p></h3>
+    <h3><p><a href="/platform/basket">Корзина</a></p></h3>
 </body>
 </html>
