--- a/UrbanDjango/templates/third_task/basket.html
+++ b/UrbanDjango/templates/third_task/basket.html
@@ -1,10 +1,13 @@
+<!--Корзина магазина-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Корзина</title>
 </head>
 <body>
-$END$
+    <h1>Корзина пуста</h1>
+    <a href="/platform/"><button>Вернуться обратно</button></a>
+
 </body>
 </html>
