--- a/UrbanDjango/templates/third_task/helmets.html
+++ b/UrbanDjango/templates/third_task/helmets.html
@@ -1,10 +1,19 @@
+<!--Страница выбора шлемов-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>{{ title }}</title>
 </head>
 <body>
-$END$
+    <h1>{{ text }}</h1>
+    <ul>
+        <li>{{ buy1 }} <button>Купить</button></li>
+        <li>{{ buy2 }} <button>Купить</button></li>
+        <li>{{ buy3 }} <button>Купить</button></li>
+    </ul>
+
+    <a href="/platform/"><button>Вернуться обратно</button></a>
+
 </body>
 </html>
